{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 234,
  "lineage": "41bcc761-c9d9-6814-ef34-dc04847a1df2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054cb672875acfce0",
            "domain": "vpc",
            "id": "eipalloc-054cb672875acfce0",
            "network_border_group": "af-south-1",
            "public_dns": "ec2-13-246-59-126.af-south-1.compute.amazonaws.com",
            "public_ip": "13.246.59.126",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Database1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060867d58b989c6be",
            "arn": "arn:aws:ec2:af-south-1:351642874049:instance/i-0bdc3e438e587682c",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bdc3e438e587682c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-015c4ac40232d13d3",
            "private_dns": "ip-10-0-2-121.af-south-1.compute.internal",
            "private_ip": "10.0.2.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0222f5b303ae50c86",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e5878e9e5a95db4",
            "tags": {
              "Name": "ubuntu"
            },
            "tags_all": {
              "Name": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e2a4fc5c18c2d848"
            ]
          },
          "dependencies": [
            "aws_subnet.private1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Database2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060867d58b989c6be",
            "arn": "arn:aws:ec2:af-south-1:351642874049:instance/i-0bcf54f13283ca5ee",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bcf54f13283ca5ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0423b80d6c7cd3c86",
            "private_dns": "ip-10-0-4-150.af-south-1.compute.internal",
            "private_ip": "10.0.4.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e5bdfde10521e3c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7d9a0a9a37a0a7d",
            "tags": {
              "Name": "ubuntu2"
            },
            "tags_all": {
              "Name": "ubuntu2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e2a4fc5c18c2d848"
            ]
          },
          "dependencies": [
            "aws_subnet.private2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-pure-private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060867d58b989c6be",
            "arn": "arn:aws:ec2:af-south-1:351642874049:instance/i-06c22e6484f9001cc",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c22e6484f9001cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c9179701d0f1bc78",
            "private_dns": "ip-10-0-5-50.af-south-1.compute.internal",
            "private_ip": "10.0.5.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a746eddf682d8893",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02215842293487ecb",
            "tags": {
              "Name": "Datebase"
            },
            "tags_all": {
              "Name": "Datebase"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e2a4fc5c18c2d848"
            ]
          },
          "dependencies": [
            "aws_subnet.private3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060867d58b989c6be",
            "arn": "arn:aws:ec2:af-south-1:351642874049:instance/i-0d40c894993b76adb",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d40c894993b76adb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c8c82b2de5e8b891",
            "private_dns": "ip-10-0-1-230.af-south-1.compute.internal",
            "private_ip": "10.0.1.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02f15c1738cbcd5fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0366989e6bf46c609",
            "tags": {
              "Name": "ubuntu"
            },
            "tags_all": {
              "Name": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e2a4fc5c18c2d848"
            ]
          },
          "dependencies": [
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060867d58b989c6be",
            "arn": "arn:aws:ec2:af-south-1:351642874049:instance/i-0113ba43f078fe9ec",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0113ba43f078fe9ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02faa675dc801b7a3",
            "private_dns": "ip-10-0-3-17.af-south-1.compute.internal",
            "private_ip": "10.0.3.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06fb6f226cf33bb26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083f270cb1b41ac33",
            "tags": {
              "Name": "ubuntu2"
            },
            "tags_all": {
              "Name": "ubuntu2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e2a4fc5c18c2d848"
            ]
          },
          "dependencies": [
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:internet-gateway/igw-00a3b2953bbd4efed",
            "id": "igw-00a3b2953bbd4efed",
            "owner_id": "351642874049",
            "tags": {
              "Name": "customer1-staging-igw"
            },
            "tags_all": {
              "Name": "customer1-staging-igw"
            },
            "vpc_id": "vpc-0b2c47e543ed564cf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054cb672875acfce0",
            "connectivity_type": "public",
            "id": "nat-0638b3c412697a8dc",
            "network_interface_id": "eni-03dd660c56d3fd5e2",
            "private_ip": "10.0.1.198",
            "public_ip": "13.246.59.126",
            "subnet_id": "subnet-0366989e6bf46c609",
            "tags": {
              "Name": "customer1-staging-nat-gw"
            },
            "tags_all": {
              "Name": "customer1-staging-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:route-table/rtb-03ce538e662d902b2",
            "id": "rtb-03ce538e662d902b2",
            "owner_id": "351642874049",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "customer1-staging-private-rt"
            },
            "tags_all": {
              "Name": "customer1-staging-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2c47e543ed564cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:route-table/rtb-0051013de45384373",
            "id": "rtb-0051013de45384373",
            "owner_id": "351642874049",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0638b3c412697a8dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customer1-staging-pivate-nat-rt"
            },
            "tags_all": {
              "Name": "customer1-staging-pivate-nat-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2c47e543ed564cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:route-table/rtb-006e87c74090733f5",
            "id": "rtb-006e87c74090733f5",
            "owner_id": "351642874049",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a3b2953bbd4efed",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customer1-staging-public-rt"
            },
            "tags_all": {
              "Name": "customer1-staging-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2c47e543ed564cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7535b0dbe19482b",
            "route_table_id": "rtb-03ce538e662d902b2",
            "subnet_id": "subnet-06e5878e9e5a95db4"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0073de0c20bc75b6e",
            "route_table_id": "rtb-03ce538e662d902b2",
            "subnet_id": "subnet-0f7d9a0a9a37a0a7d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c84326e6a02b6fb5",
            "route_table_id": "rtb-006e87c74090733f5",
            "subnet_id": "subnet-0366989e6bf46c609"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066b720d9d5cafda4",
            "route_table_id": "rtb-006e87c74090733f5",
            "subnet_id": "subnet-083f270cb1b41ac33"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:security-group/sg-031d269f6c7c25e14",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031d269f6c7c25e14",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "351642874049",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2c47e543ed564cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:subnet/subnet-06e5878e9e5a95db4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06e5878e9e5a95db4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351642874049",
            "tags": {
              "Name": "customer1-staging-private-subnet1"
            },
            "tags_all": {
              "Name": "customer1-staging-private-subnet1"
            },
            "vpc_id": "vpc-0b2c47e543ed564cf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:subnet/subnet-0f7d9a0a9a37a0a7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0f7d9a0a9a37a0a7d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351642874049",
            "tags": {
              "Name": "customer1-staging-private-subnet2"
            },
            "tags_all": {
              "Name": "customer1-staging-private-subnet2"
            },
            "vpc_id": "vpc-0b2c47e543ed564cf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:subnet/subnet-02215842293487ecb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-02215842293487ecb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351642874049",
            "tags": {
              "Name": "pure-private-1"
            },
            "tags_all": {
              "Name": "pure-private-1"
            },
            "vpc_id": "vpc-0b2c47e543ed564cf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:subnet/subnet-0366989e6bf46c609",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0366989e6bf46c609",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351642874049",
            "tags": {
              "Name": "customer1-staging-public-subnet1"
            },
            "tags_all": {
              "Name": "customer1-staging-public-subnet1"
            },
            "vpc_id": "vpc-0b2c47e543ed564cf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:subnet/subnet-083f270cb1b41ac33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-083f270cb1b41ac33",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351642874049",
            "tags": {
              "Name": "customer1-staging-public-subnet2"
            },
            "tags_all": {
              "Name": "customer1-staging-public-subnet2"
            },
            "vpc_id": "vpc-0b2c47e543ed564cf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:vpc/vpc-0b2c47e543ed564cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02baf1a2f31b37362",
            "default_route_table_id": "rtb-097b9f8cfe031a577",
            "default_security_group_id": "sg-0e2a4fc5c18c2d848",
            "dhcp_options_id": "dopt-0bb7380f042bbad27",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b2c47e543ed564cf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-097b9f8cfe031a577",
            "owner_id": "351642874049",
            "tags": {
              "Name": "customer1-staging-lab"
            },
            "tags_all": {
              "Name": "customer1-staging-lab"
            }
          }
        }
      ]
    }
  ]
}